[move-ide] Move analyzer versioning (#17929)
## Description 

We would like to use the same versioning scheme we use for Sui binaries
(particularly for `sui` binary) for the `move-analyzer` as well.

Both `sui` and `move-analyzer` binaries "bundle" the move compiler and
being able to tell which version you are using is very useful (and
really necessary to avoid discrepancies in the compilation process
between the IDE and CLI).

It's apparently not possible to have to `move-analyzer` binaries in the
repo (one in `crates` and one in `external-crates`) so I renamed the one
in `external-crates` as it's the one in `crates` that is intended to be
externally used from now on.

## Test plan 

All existing tests must pass

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -124,6 +124,7 @@ members = [
   "crates/sui-metric-checker",
   "crates/sui-move",
   "crates/sui-move-build",
+  "crates/sui-move-lsp",
   "crates/sui-network",
   "crates/sui-node",
   "crates/sui-open-rpc",
@@ -563,6 +564,7 @@ move-stackless-bytecode = { path = "external-crates/move/crates/move-stackless-b
 move-symbol-pool = { path = "external-crates/move/crates/move-symbol-pool" }
 move-abstract-interpreter = { path = "external-crates/move/crates/move-abstract-interpreter" }
 move-abstract-stack = { path = "external-crates/move/crates/move-abstract-stack" }
+move-analyzer = { path = "external-crates/move/crates/move-analyzer" }
 
 fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c101a5176799db3eb9c801b844e7add92153d291" }
 fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c101a5176799db3eb9c801b844e7add92153d291" }
@@ -622,6 +624,7 @@ sui-macros = { path = "crates/sui-macros" }
 sui-metric-checker = { path = "crates/sui-metric-checker" }
 sui-move = { path = "crates/sui-move" }
 sui-move-build = { path = "crates/sui-move-build" }
+sui-move-lsp = { path = "crates/sui-move-lsp" }
 sui-network = { path = "crates/sui-network" }
 sui-node = { path = "crates/sui-node" }
 sui-open-rpc = { path = "crates/sui-open-rpc" }
