--- a/crates/sui-bridge-cli/Cargo.toml
+++ b/crates/sui-bridge-cli/Cargo.toml
@@ -25,3 +25,5 @@ serde.workspace = true
 serde_with.workspace = true
 serde_json.workspace = true
 telemetry-subscribers.workspace = true
+reqwest.workspace = true
+futures.workspace = true
