--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,6 +7,7 @@ on:
       - testnet
       - testnet4
       - testnet4-wit
+      - testnet4-v1.26
 
 env:
   REPOSITORY: mamorufoundation/sui-sniffer
