--- a/.github/workflows/github-external-pr-monitor.yml
+++ b/.github/workflows/github-external-pr-monitor.yml
@@ -1,20 +1,18 @@
-name: GitHub Issues Monitor
-
+name: "GitHub external PRs Monitor"
 on:
-  issues:
-    types: [opened]
+- pull_request_target
 
-jobs: 
-  notify-issues:
-    name: Dispatch workflow to notify slack channel on issues
-    if: github.event_name == 'issues'
+jobs:
+  notify-prs:
+    name: Dispatch workflow to notify slack channel on PRs
     runs-on: ubuntu-latest
     steps:
       - name: Dispatch github-issues-external-prs-monitor in MystenLabs/sui-operations
         uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # pin@v3.0.0
         with: 
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
           repository: MystenLabs/sui-operations
           token: ${{ secrets.DOCKER_BINARY_BUILDS_DISPATCH }}
           event-type: github-issues-external-prs-monitor
-          client-payload: '{"author": "${{github.event.issue.user.login}}", "event_name": "issue", "issue_number": "${{github.event.issue.number}}"}'
+          client-payload: '{"author": "${{github.event.pull_request.user.login}}", "event_name": "pull_request", "pull_request_number": "${{github.event.pull_request.number}}"}'
 
