[GraphQL] Fix APY for a validator (#17701)
This PR fixes the APY for a validator and ensures that historical APYs
can be computed. It also reverts some changes in the `governance_api`,
particularly moves `exchange_rates` as a free function that can be
called from the GraphQL crate.

At system start, the task to trigger the exchange rates cache is
executed, thus until the next trigger on epoch change, the apys can be
fetched pretty fast (~2-3s for the standard 5 items per page).

Updated test. Manual tests and queries.

Response time: ~1s
```graphql
{
  epoch {
    epochId
    referenceGasPrice
    validatorSet {
      totalStake
      inactivePoolsSize
      activeValidators(first: 5) {
        nodes {
          name
          apy
        }
      }
    }
  }
}
```

```json
{
  "data": {
    "epoch": {
      "epochId": 405,
      "referenceGasPrice": "751",
      "validatorSet": {
        "totalStake": "8163113083622628156",
        "inactivePoolsSize": 4,
        "activeValidators": {
          "nodes": [
            {
              "name": "ComingChat",
              "apy": 310
            },
            {
              "name": "InfStones",
              "apy": 302
            },
            {
              "name": "Gaucho",
              "apy": 310
            },
            {
              "name": "Astro-Stakers",
              "apy": 310
            },
            {
              "name": "H2O Nodes",
              "apy": 310
            }
          ]
        }
      }
    }
  }
}
```

Response time for this query: ~2s
```graphql
{
  epoch(id: 127){
    epochId
    referenceGasPrice
    validatorSet {
      totalStake
      inactivePoolsSize
      activeValidators {
        nodes {
          name
          apy
        }
      }
    }
  }
}
```

```json
{
  "data": {
    "epoch": {
      "epochId": 127,
      "referenceGasPrice": "765",
      "validatorSet": {
        "totalStake": "7437800674887300328",
        "inactivePoolsSize": 2,
        "activeValidators": 

--- a/crates/sui-graphql-rpc/Cargo.toml
+++ b/crates/sui-graphql-rpc/Cargo.toml
@@ -26,6 +26,7 @@ git-version.workspace = true
 hex.workspace = true
 http.workspace = true
 hyper.workspace = true
+itertools.workspace = true
 lru.workspace = true
 move-binary-format.workspace = true
 move-disassembler.workspace = true
