--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -99,3 +99,27 @@ jobs:
       # Ensure there are no uncommitted changes in the repo after running tests
       - run: scripts/changed-files.sh
         shell: bash
+
+  bridge-evm:
+    name: bridge-evm-tests
+    needs: diff
+    if: needs.diff.outputs.isSolidity == 'true'
+    runs-on: [ ubuntu-latest ]
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - name: Install Foundry
+        run: |
+          curl -L https://foundry.paradigm.xyz | { cat; echo '$FOUNDRY_BIN_DIR/foundryup'; } | bash
+          echo "$HOME/.config/.foundry/bin" >> $GITHUB_PATH
+      - name: Install Foundry Dependencies
+        working-directory: bridge/evm
+        run: |
+          forge install https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable@v5.0.1 https://github.com/foundry-rs/forge-std@v1.3.0 https://github.com/OpenZeppelin/openzeppelin-foundry-upgrades --no-git --no-commit
+      - name: Check Bridge EVM Unit Tests
+        shell: bash
+        working-directory: bridge/evm
+        env:
+          INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
+        run: |
+          forge clean
+          forge test --ffi
