--- a/docker/sui-tools/Dockerfile
+++ b/docker/sui-tools/Dockerfile
@@ -18,6 +18,9 @@ COPY external-crates external-crates
 
 RUN cargo build --profile ${PROFILE} \
     --bin sui-node \
+    --bin sui-bridge \
+    --bin sui-bridge-cli \
+    --bin sui-proxy \
     --bin sui \
     --bin sui-faucet \
     --bin sui-cluster-test \
@@ -31,6 +34,9 @@ WORKDIR "$WORKDIR/sui"
 RUN apt-get update && apt-get install -y libpq5 libpq-dev
 
 COPY --from=builder /sui/target/release/sui-node /usr/local/bin
+COPY --from=builder /sui/target/release/sui-bridge /usr/local/bin
+COPY --from=builder /sui/target/release/sui-bridge-cli /usr/local/bin
+COPY --from=builder /sui/target/release/sui-proxy /usr/local/bin
 COPY --from=builder /sui/target/release/sui /usr/local/bin
 COPY --from=builder /sui/target/release/sui-faucet /usr/local/bin
 COPY --from=builder /sui/target/release/sui-cluster-test /usr/local/bin
