[move] Add #[rand_test] to allow for tests with randoml-generated inputs

--- a/external-crates/move/crates/move-unit-test/Cargo.toml
+++ b/external-crates/move/crates/move-unit-test/Cargo.toml
@@ -35,6 +35,7 @@ move-binary-format.workspace = true
 move-model.workspace = true
 move-bytecode-utils.workspace = true
 bcs.workspace = true
+rand.workspace = true
 
 [dev-dependencies]
 datatest-stable.workspace = true
