--- a/docker/sui-tools/Dockerfile
+++ b/docker/sui-tools/Dockerfile
@@ -20,6 +20,7 @@ RUN cargo build --profile ${PROFILE} \
     --bin sui-node \
     --bin sui-bridge \
     --bin sui-bridge-cli \
+    --bin sui-analytics-indexer \
     --bin sui-proxy \
     --bin sui \
     --bin sui-faucet \
@@ -36,6 +37,7 @@ RUN apt-get update && apt-get install -y libpq5 libpq-dev
 COPY --from=builder /sui/target/release/sui-node /usr/local/bin
 COPY --from=builder /sui/target/release/sui-bridge /usr/local/bin
 COPY --from=builder /sui/target/release/sui-bridge-cli /usr/local/bin
+COPY --from=builder /sui/target/release/sui-analytics-indexer /usr/local/bin
 COPY --from=builder /sui/target/release/sui-proxy /usr/local/bin
 COPY --from=builder /sui/target/release/sui /usr/local/bin
 COPY --from=builder /sui/target/release/sui-faucet /usr/local/bin
