--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,9 +43,9 @@ jobs:
       matrix:
         os:
           [
-            ubuntu-ghcloud, # ubuntu-x86_64
-            windows-ghcloud, # windows-x86_64
-            macos-latest-xl, # macos-x86_64
+            # ubuntu-ghcloud, # ubuntu-x86_64
+            # windows-ghcloud, # windows-x86_64
+            # macos-latest-xl, # macos-x86_64
             macos-latest-xlarge # macos-arm64
           ]
       fail-fast: false
