Inherit workplace version for sui crates

--- a/consensus/core/Cargo.toml
+++ b/consensus/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "consensus-core"
-version = "0.1.0"
+version.workspace = true
 license = "Apache-2.0"
 authors = ["Mysten Labs <build@mystenlabs.com>"]
 edition = "2021"
