--- a/crates/sui-graphql-rpc-headers/Cargo.toml
+++ b/crates/sui-graphql-rpc-headers/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-graphql-rpc-headers"
-version = "0.1.0"
+version.workspace = true
 authors = ["Mysten Labs <build@mystenlabs.com>"]
 license = "Apache-2.0"
 publish = false
