--- a/crates/sui-rest-api/Cargo.toml
+++ b/crates/sui-rest-api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-rest-api"
-version = "0.1.0"
+version.workspace = true
 edition = "2021"
 license = "Apache-2.0"
 publish = false
