--- a/crates/sui-verifier-transactional-tests/Cargo.toml
+++ b/crates/sui-verifier-transactional-tests/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-verifier-transactional-tests"
-version = "0.1.0"
+version.workspace = true
 authors = ["Mysten Labs <eng@mystenlabs.com>"]
 description = "Transactional tests for Sui Verifier"
 license = "Apache-2.0"
