--- a/sui-execution/v2/sui-move-natives/Cargo.toml
+++ b/sui-execution/v2/sui-move-natives/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-move-natives-v2"
-version = "0.1.0"
+version.workspace = true
 edition = "2021"
 authors = ["Mysten Labs <eng@mystenlabs.com>"]
 description = "Move framework for sui platform"
