--- a/consensus/core/Cargo.toml
+++ b/consensus/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "consensus-core"
-version.workspace = true
+version = "0.1.0"
 license = "Apache-2.0"
 authors = ["Mysten Labs <build@mystenlabs.com>"]
 edition = "2021"
