--- a/crates/transaction-fuzzer/Cargo.toml
+++ b/crates/transaction-fuzzer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "transaction-fuzzer"
-version.workspace = true
+version = "0.1.0"
 edition = "2021"
 authors = ["Mysten Labs <eng@mystenlabs.com>"]
 description = "Tool to fuzz the system with randomly generated transactions"
