--- a/sui-execution/v2/sui-verifier/Cargo.toml
+++ b/sui-execution/v2/sui-verifier/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-verifier-v2"
-version.workspace = true
+version = "0.1.0"
 edition = "2021"
 authors = ["Mysten Labs <eng@mystenlabs.com>"]
 description = "Move framework for Sui platform"
