--- a/crates/sui-surfer/Cargo.toml
+++ b/crates/sui-surfer/Cargo.toml
@@ -27,6 +27,7 @@ tracing.workspace = true
 move-binary-format.workspace = true
 move-core-types.workspace = true
 telemetry-subscribers.workspace = true
+move-compiler.workspace = true
 
 [dev-dependencies]
 prometheus.workspace = true
