--- a/crates/mysten-common/Cargo.toml
+++ b/crates/mysten-common/Cargo.toml
@@ -2,7 +2,7 @@
 name = "mysten-common"
 authors = ["Mysten Labs <build@mystenlabs.com>"]
 license = "Apache-2.0"
-version.workspace = true
+version = "0.1.0"
 edition = "2021"
 publish = false
 
