--- a/crates/sui-single-node-benchmark/Cargo.toml
+++ b/crates/sui-single-node-benchmark/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-single-node-benchmark"
-version.workspace = true
+version = "0.1.0"
 edition = "2021"
 publish = false
 license = "Apache-2.0"
