--- a/crates/prometheus-closure-metric/Cargo.toml
+++ b/crates/prometheus-closure-metric/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "prometheus-closure-metric"
-version.workspace = true
+version = "0.1.0"
 authors = ["Andrew Schran <aschran@mystenlabs.com>"]
 repository = "https://github.com/mystenlabs/mysten-infra"
 description = "Library for a Prometheus metric that computes its value by given closure at collection time"
