--- a/crates/sui-framework-tests/Cargo.toml
+++ b/crates/sui-framework-tests/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-framework-tests"
-version.workspace = true
+version = "0.1.0"
 edition = "2021"
 authors = ["Mysten Labs <eng@mystenlabs.com>"]
 description = "Runs Move tests for sui-framework"
