--- a/crates/sui-graphql-e2e-tests/Cargo.toml
+++ b/crates/sui-graphql-e2e-tests/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-graphql-e2e-tests"
-version.workspace = true
+version = "0.1.0"
 authors = ["Mysten Labs <eng@mystenlabs.com>"]
 description = "End to end tests for Sui GraphQL"
 license = "Apache-2.0"
