--- a/crates/sui-package-resolver/Cargo.toml
+++ b/crates/sui-package-resolver/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-package-resolver"
-version.workspace = true
+version = "0.1.0"
 edition = "2021"
 authors = ["Mysten Labs <build@mystenlabs.com>"]
 license = "Apache-2.0"
