--- a/crates/sui-snapshot/Cargo.toml
+++ b/crates/sui-snapshot/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-snapshot"
-version.workspace = true
+version = "0.1.0"
 edition = "2021"
 publish = false
 license = "Apache-2.0"
