--- a/crates/sui-upgrade-compatibility-transactional-tests/Cargo.toml
+++ b/crates/sui-upgrade-compatibility-transactional-tests/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sui-upgrade-compatibility-transactional-tests"
-version.workspace = true
+version = "0.1.0"
 authors = ["Mysten Labs <eng@mystenlabs.com>"]
 description = "Transactional tests for package upgrade compatibility checking"
 license = "Apache-2.0"
