--- a/crates/test-cluster/Cargo.toml
+++ b/crates/test-cluster/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "test-cluster"
 authors = ["Mysten Labs <build@mystenlabs.com>"]
-version.workspace = true
+version = "0.1.0"
 license = "Apache-2.0"
 publish = false
 edition = "2021"
