[bug-fix] Deterministic genesis via seeded randomness (from Pilotfish)

--- a/crates/sui-single-node-benchmark/Cargo.toml
+++ b/crates/sui-single-node-benchmark/Cargo.toml
@@ -18,6 +18,7 @@ sui-transaction-checks.workspace = true
 sui-types = { workspace = true, features = ["test-utils"] }
 sui-storage.workspace = true
 
+rand.workspace = true
 async-trait.workspace = true
 bcs.workspace = true
 clap.workspace = true
