--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -104,7 +104,7 @@ jobs:
     name: bridge-evm-tests
     needs: diff
     if: needs.diff.outputs.isRust == 'true' || needs.diff.outputs.isSolidity == 'true'
-    runs-on: [ ubuntu-latest ]
+    runs-on: [ ubuntu-ghcloud ]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
       - name: Install Foundry
