Add ca-certificates to sui-tools Dockerfile
The `sui-bridge` binary is unable to make upstream TLS requests without the root CA bundle

--- a/docker/sui-tools/Dockerfile
+++ b/docker/sui-tools/Dockerfile
@@ -33,7 +33,7 @@ FROM debian:bullseye-slim AS runtime
 WORKDIR "$WORKDIR/sui"
 
 # sui-tool needs libpq at runtime
-RUN apt-get update && apt-get install -y libpq5 libpq-dev
+RUN apt-get update && apt-get install -y libpq5 libpq-dev ca-certificates
 
 COPY --from=builder /sui/target/release/sui-node /usr/local/bin
 COPY --from=builder /sui/target/release/stress /usr/local/bin
