--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,7 +89,7 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-          # echo "s3_archive_exist=$(curl -Is https://sui-releases.s3.us-east-1.amazonaws.com/releases/sui-${{ env.sui_tag }}-${{ env.os_type }}.tgz | head -n 1 | grep '200 OK')" >> $GITHUB_ENV
+          echo "s3_archive_exist=$(curl -Is https://sui-releases.s3.us-east-1.amazonaws.com/releases/sui-${{ env.sui_tag }}-${{ env.os_type }}.tgz | head -n 1 | grep '200 OK')" >> $GITHUB_ENV
 
       - name: Download archive, if it exists
         if: ${{ env.s3_archive_exist != '' }}
@@ -97,6 +97,7 @@ jobs:
         run: |
           mkdir -p ${{ env.TMP_BUILD_DIR }}
           aws s3 cp s3://sui-releases/releases/sui-${{ env.sui_tag }}-${os_type}.tgz ./tmp/sui-${{ env.sui_tag }}-${os_type}.tgz
+          tar -xf ./tmp/sui-${{ env.sui_tag }}-${os_type}.tgz -C ${{ env.TMP_BUILD_DIR }}
 
       - name: Setup caching
         if: ${{ env.s3_archive_exist == '' }}
@@ -170,7 +171,8 @@ jobs:
         shell: bash
         run: |
           choco install checksum
-          export sui_sha=$(checksum -t sha256 ../${{ env.TMP_BUILD_DIR }}/sui.exe)
+          pwd
+          export sui_sha=$(cd .. && checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe && cd -)
 
           cat <<EOF >>VERIFICATION.txt
           Sui Binary verification steps
