--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -166,13 +166,13 @@ jobs:
 
       - name: Publish Windows sui binary to Chocolatey
         if: ${{ matrix.os == 'windows-ghcloud' && contains( env.sui_tag, 'testnet') }}
-        working-directory: chocolatey
         continue-on-error: true
         shell: bash
         run: |
           choco install checksum
           pwd
-          export sui_sha=$(cd .. && checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe && cd -)
+          export sui_sha=$(checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe)
+          cd chocolatey
 
           cat <<EOF >>VERIFICATION.txt
           Sui Binary verification steps
