--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -183,9 +183,9 @@ jobs:
           File 'LICENSE.txt' is obtained from: https://github.com/MystenLabs/sui/blob/main/LICENSE
           EOF
 
-          choco pack --version ${{ env.sui_version }} configuration=release
-          choco apikey --api-key ${{ secrets.CHOCO_API_KEY }} --source https://push.chocolatey.org/
-          choco push sui.${{ env.sui_version }}.nupkg --source https://push.chocolatey.org/
+          # choco pack --version ${{ env.sui_version }} configuration=release
+          # choco apikey --api-key ${{ secrets.CHOCO_API_KEY }} --source https://push.chocolatey.org/
+          # choco push sui.${{ env.sui_version }}.nupkg --source https://push.chocolatey.org/
 
       # - name: Upload release artifacts for ${{ matrix.os }} platform
       #   uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # pin@v3
