--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -172,6 +172,7 @@ jobs:
           choco install checksum
           pwd
           export sui_sha=$(checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe)
+          mkdir target/release && cp ${{ env.TMP_BUILD_DIR }}/sui.exe target/release
           cd chocolatey
 
           cat <<EOF >>VERIFICATION.txt
@@ -183,9 +184,9 @@ jobs:
           File 'LICENSE.txt' is obtained from: https://github.com/MystenLabs/sui/blob/main/LICENSE
           EOF
 
-          # choco pack --version ${{ env.sui_version }} configuration=release
-          # choco apikey --api-key ${{ secrets.CHOCO_API_KEY }} --source https://push.chocolatey.org/
-          # choco push sui.${{ env.sui_version }}.nupkg --source https://push.chocolatey.org/
+          choco pack --version ${{ env.sui_version }} configuration=release
+          choco apikey --api-key ${{ secrets.CHOCO_API_KEY }} --source https://push.chocolatey.org/
+          choco push sui.${{ env.sui_version }}.nupkg --source https://push.chocolatey.org/
 
       # - name: Upload release artifacts for ${{ matrix.os }} platform
       #   uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # pin@v3
