add more debug stuff

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -171,7 +171,10 @@ jobs:
         run: |
           choco install checksum
           export sui_sha=$(checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe)
-          mkdir -p ./target/release && cp ${{ env.TMP_BUILD_DIR }}/sui.exe ./target/release
+          mkdir -p ./target/release
+          ls -al ${{ env.TMP_BUILD_DIR }}/sui.exe
+          echo ${sui_sha}
+          cp ${{ env.TMP_BUILD_DIR }}/sui.exe ./target/release
           cd chocolatey
 
           cat <<EOF >>VERIFICATION.txt
