moar debug stuff

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,7 @@ jobs:
           mkdir -p ${{ env.TMP_BUILD_DIR }}
           aws s3 cp s3://sui-releases/releases/sui-${{ env.sui_tag }}-${os_type}.tgz ./tmp/sui-${{ env.sui_tag }}-${os_type}.tgz
           tar -xf ./tmp/sui-${{ env.sui_tag }}-${os_type}.tgz -C ${{ env.TMP_BUILD_DIR }}
+          ls -al ${{ env.TMP_BUILD_DIR }}
 
       - name: Setup caching
         if: ${{ env.s3_archive_exist == '' }}
@@ -170,11 +171,8 @@ jobs:
         shell: bash
         run: |
           choco install checksum
-          export sui_sha=$(checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe)
-          mkdir -p ./target/release
-          ls -al ${{ env.TMP_BUILD_DIR }}/sui.exe
-          echo ${sui_sha}
-          cp ${{ env.TMP_BUILD_DIR }}/sui.exe ./target/release
+          # export sui_sha=$(checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe)
+          checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe
           cd chocolatey
 
           cat <<EOF >>VERIFICATION.txt
