--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -172,6 +172,8 @@ jobs:
           choco install checksum
           # export sui_sha=$(checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe)
           checksum -t sha256 ${{ env.TMP_BUILD_DIR }}/sui.exe
+          mkdir -p ./target/release
+          cp ${{ env.TMP_BUILD_DIR }}/sui.exe ./target/release
           cd chocolatey
 
           cat <<EOF >>VERIFICATION.txt
