docker-compose rpc2

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@ docs/content/references/sui-api/sui-graphql/*
 docs/content/references/framework/**
 
 lcov.info
+
+# nre dir files
+nre/docker/graphql.toml
