--- a/Cargo.toml
+++ b/Cargo.toml
@@ -537,6 +537,9 @@ zeroize = "1.6.0"
 versions = "4.1.0"
 linked-hash-map = "0.5.6"
 shlex = "1.3.0"
+passkey = "0.2.0"
+coset = "0.3.7"
+p256 = "0.13.2"
 
 # Move dependencies
 move-binary-format = { path = "external-crates/move/crates/move-binary-format" }
