initial test change

--- a/external-crates/move/crates/move-analyzer/Cargo.toml
+++ b/external-crates/move/crates/move-analyzer/Cargo.toml
@@ -18,6 +18,7 @@ itertools.workspace = true
 lsp-server.workspace = true
 lsp-types.workspace = true
 serde_json.workspace = true
+serde.workspace = true
 sha2.workspace = true
 tempfile.workspace = true
 url.workspace = true
@@ -29,3 +30,10 @@ move-compiler.workspace = true
 move-ir-types.workspace = true
 move-package.workspace = true
 move-symbol-pool.workspace = true
+
+[dev-dependencies]
+datatest-stable.workspace = true
+
+[[test]]
+name = "ide_testsuite"
+harness = false
