rest-index: parallelize initializing index
From a few local tests using epoch 429's formal snapshot, this patch
reduced indexing time from ~45 minutes to ~5 minutes.

--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -36,6 +36,7 @@ parking_lot.workspace = true
 prometheus.workspace = true
 rand.workspace = true
 roaring.workspace = true
+rayon.workspace = true
 rocksdb.workspace = true
 reqwest.workspace = true
 scopeguard.workspace = true
