--- a/crates/sui-bridge-cli/Cargo.toml
+++ b/crates/sui-bridge-cli/Cargo.toml
@@ -27,3 +27,4 @@ serde_json.workspace = true
 telemetry-subscribers.workspace = true
 reqwest.workspace = true
 futures.workspace = true
+csv = "1.3.0"
