use dedicated antithesis compose file

--- a/docker/sui-network/Dockerfile
+++ b/docker/sui-network/Dockerfile
@@ -15,7 +15,7 @@ RUN ./new-genesis.sh
 
 FROM scratch 
 
-COPY ./docker-compose.yaml /
+COPY ./docker-compose-antithesis.yaml /docker-compose.yaml
 COPY /genesis/overlays/* /genesis/overlays/
 COPY /genesis/static/* /genesis/static/
 COPY --from=setup /genesis/files/* /genesis/files/
