--- a/docker/sui-network/docker-compose-antithesis.yaml
+++ b/docker/sui-network/docker-compose-antithesis.yaml
@@ -10,20 +10,18 @@ services:
     hostname: validator1
     environment:
       - RUST_BACKTRACE=1
-      - RUST_LOG=info,sui_core=debug,sui_network=debug,sui_node=debug,narwhal=debug,narwhal-primary::helper=info,jsonrpsee=error
+      - RUST_LOG=info,sui_core=debug,narwhal=debug,narwhal-primary::helper=info,jsonrpsee=error
       - RPC_WORKER_THREAD=12
       - NEW_CHECKPOINT_WARNING_TIMEOUT_MS=30000
       - NEW_CHECKPOINT_PANIC_TIMEOUT_MS=60000
+      - TOKIO_WORKER_THREADS=4
     volumes:
       - ./genesis/files/validator1-8080.yaml:/opt/sui/config/validator.yaml:ro
       - ./genesis/files/genesis.blob:/opt/sui/config/genesis.blob:ro
-      - /tmp/sui/db1:/opt/sui/db:rw
+      - ./dbs/validator1:/opt/sui/db:rw
+      - ./logs/validator1:/opt/sui/logs
     command:
-      [
-        "/usr/local/bin/sui-node-inst",
-        "--config-path",
-        "/opt/sui/config/validator.yaml",
-      ]
+        "bash -c '/usr/local/bin/sui-node-inst --config-path /opt/sui/config/validator.yaml > /opt/sui/logs/full_logs.log 2>&1'"
     restart: on-failure
     logging:
       driver: "json-file"
@@ -43,16 +41,14 @@ services:
       - RPC_WORKER_THREAD=12
       - NEW_CHECKPOINT_WARNING_TIMEOUT_MS=30000
       - NEW_CHECKPOINT_PANIC_TIMEOUT_MS=60000
+      - TOKIO_WORKER_THREADS=4
     volumes:
       - ./genesis/files/validator2-8080.yaml:/opt/sui/config/validator.yaml:ro
       - ./genesis/files/genesis.blob:/opt/sui/config/genesis.blob:ro
-      - /tmp/sui/db2:/opt/sui/db:rw
+      - ./dbs/validator2:/opt/sui/db:rw
+      - ./logs/validator2:/opt/sui/logs
     command:
-      [
-        "/usr/local/bin/sui-node-inst",
-        "--config-path",
-        "/opt/sui/config/validator.yaml",
-      ]
+        "bash -c '/usr/local/bin/sui-node-inst --config-path /opt/sui/config/validator.yaml > /opt/sui/logs/full_logs.log 2>&1'"
     restart: on-failure
     logging:
       driver: "json-file"
@@ -72,16 +68,14 @@ services:
       - RPC_WORKER_THREAD=12
       - NEW_CHECKPOINT_WARNING_TIMEOUT_MS=30000
       - NEW_CHECKPOINT_PANIC_TIMEOUT_MS=60000
+      - TOKIO_WORKER_THREADS=4
     volumes:
       - ./genesis/files/validator3-8080.yaml:/opt/sui/config/validator.yaml:ro
       - ./genesis/files/genesis.blob:/opt/sui/config/genesis.blob:ro
-      - /tmp/sui/db3:/opt/sui/db:rw
+      - ./dbs/validator3:/opt/sui/db:rw
+      - ./logs/validator3:/opt/sui/logs
     command:
-      [
-        "/usr/local/bin/sui-node-inst",
-        "--config-path",
-        "/opt/sui/config/validator.yaml",
-      ]
+        "bash -c '/usr/local/bin/sui-node-inst --config-path /opt/sui/config/validator.yaml > /opt/sui/logs/full_logs.log 2>&1'"
     restart: on-failure
     logging:
       driver: "json-file"
@@ -101,16 +95,14 @@ services:
       - RPC_WORKER_THREAD=12
       - NEW_CHECKPOINT_WARNING_TIMEOUT_MS=30000
       - NEW_CHECKPOINT_PANIC_TIMEOUT_MS=60000
+      - TOKIO_WORKER_THREADS=4
     volumes:
       - ./genesis/files/validator4-8080.yaml:/opt/sui/config/validator.yaml:ro
       - ./genesis/files/genesis.blob:/opt/sui/config/genesis.blob:ro
-      - /tmp/sui/db4:/opt/sui/db:rw
+      - ./dbs/validator4:/opt/sui/db:rw
+      - ./logs/validator4:/opt/sui/logs
     command:
-      [
-        "/usr/local/bin/sui-node-inst",
-        "--config-path",
-        "/opt/sui/config/validator.yaml",
-      ]
+        "bash -c '/usr/local/bin/sui-node-inst --config-path /opt/sui/config/validator.yaml > /opt/sui/logs/full_logs.log 2>&1'"
     restart: on-failure
     logging:
       driver: "json-file"
@@ -126,14 +118,16 @@ services:
     container_name: fullnode1
     environment:
       - RUST_BACKTRACE=1
-      - RUST_LOG=info,sui_core=debug,sui_network=debug,sui_node=debug,narwhal=debug,narwhal-primary::helper=info,jsonrpsee=error
+      - RUST_LOG=info,sui_core=info,narwhal=info,narwhal-primary::helper=info,jsonrpsee=error
       - RPC_WORKER_THREAD=12
       - NEW_CHECKPOINT_WARNING_TIMEOUT_MS=30000
       - NEW_CHECKPOINT_PANIC_TIMEOUT_MS=60000
+      - TOKIO_WORKER_THREADS=4
     volumes:
       - ./genesis/static/fullnode.yaml:/opt/sui/config/fullnode.yaml:ro
       - ./genesis/files/genesis.blob:/opt/sui/config/genesis.blob:ro
-      - /tmp/sui/db5:/opt/sui/db:rw
+      - ./dbs/fullnode1:/opt/sui/db:rw
+      - ./logs/fullnode1:/opt/sui/logs
     command:
       [
         "/usr/local/bin/sui-node-inst",
