add deploy_imp solidity script

--- a/bridge/evm/.env.example
+++ b/bridge/evm/.env.example
@@ -3,3 +3,5 @@ INFURA_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 ETHERSCAN_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 SEPOLIA_RPC_URL=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 MAINNET_RPC_URL=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+UPGRADE_REFERENCE_CONTRACT_NAME=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+UPGRADE_NEW_CONTRACT_NAME=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
