--- a/external-crates/move/crates/move-analyzer/Cargo.toml
+++ b/external-crates/move/crates/move-analyzer/Cargo.toml
@@ -14,6 +14,7 @@ codespan-reporting.workspace = true
 derivative.workspace = true
 dunce.workspace = true
 im.workspace = true
+json_comments.workspace = true
 itertools.workspace = true
 lsp-server.workspace = true
 lsp-types.workspace = true
