--- a/nre/helm/indexer/templates/service.yaml
+++ b/nre/helm/indexer/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "indexer-reader.fullname" . }}
+  name: {{ include "indexer.fullname" . }}
   labels:
-    {{- include "indexer-reader.labels" . | nindent 4 }}
+    {{- include "indexer.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: {{ .Values.service.protocol }}
       name: {{ .Values.service.name }}
   selector:
-    {{- include "indexer-reader.selectorLabels" . | nindent 4 }}
+    {{- include "indexer.selectorLabels" . | nindent 4 }}
