--- a/nre/helm/indexer/templates/serviceaccount.yaml
+++ b/nre/helm/indexer/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "indexer-reader.serviceAccountName" . }}
+  name: {{ include "indexer.serviceAccountName" . }}
   labels:
-    {{- include "indexer-reader.labels" . | nindent 4 }}
+    {{- include "indexer.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
