checkpoint ingestion changes: * a dedicated executor for "realtime" data * range based executor for backfilling, we can specify the task size and it will process more recent checkpoint first.

--- a/crates/sui-bridge-indexer/config.yaml
+++ b/crates/sui-bridge-indexer/config.yaml
@@ -1,24 +1,26 @@
 # config.yaml format:
 
 # URL of the remote store
-# remote_store_url: <url>
+remote_store_url: https://checkpoints.testnet.sui.io
 # URL for Ethereum RPC
-# eth_rpc_url: <url>
+eth_rpc_url: https://rpc-sepolia.flashbots.net/
 # Database connection URL
-# db_url: <url>
-# File to store the progress
-# progress_store_file: <path>
+db_url: postgres://postgres:postgrespw@localhost:5432
 # Path to the checkpoints
-# checkpoints_path: <path>
+checkpoints_path: ./checkpoints
 # Number of concurrent operations
-# concurrency: 1
+concurrency: 10
 # Bridge genesis checkpoint in SUI, for testnet = 43917829
-# bridge_genesis_checkpoint: <sui bridge genesis checkpoint>
+bridge_genesis_checkpoint: 43917829
 # Ethereum to Sui bridge contract address
-# eth_sui_bridge_contract_address: <contract_address>
+eth_sui_bridge_contract_address: 0xAE68F87938439afEEDd6552B0E83D2CbC2473623
 # Starting block number
-# start_block: <indexing_start_block>
+start_block: 5997013
 # Client metric URL
-# metric_url: <url>
+metric_url: 0.0.0.0
 # Client metric port
-# metric_port: <port>
+metric_port: 9009
+# checkpoint size of each backfill worker, use 432000 for 1 worker per day, assume 5 checkpoint per second
+back_fill_lot_size: 10000
+# Optional starting checkpoint for realtime ingestion task
+resume_from_checkpoint: 68000000
