revert package manager for pnpm

--- a/package.json
+++ b/package.json
@@ -62,8 +62,5 @@
 		"turbo": "^1.10.8",
 		"typescript": "^5.3.3"
 	},
-	"packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195",
-	"dependencies": {
-		"prettier-plugin-move": "^0.0.11"
-	}
+	"packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195"
 }
