Revert "use old version of sui-framework (revert this when bug is fixed)"
This reverts commit da5f0edb0aef20afa5823a37c41d556402dfcefb.

--- a/dapps/client-gen-tests/examples/gen.toml
+++ b/dapps/client-gen-tests/examples/gen.toml
@@ -4,5 +4,5 @@ rpc = "https://fullnode.testnet.sui.io:443"
 [packages]
 AMM = { local = "../move/amm" }
 Examples = { local = "../move/examples" }
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "mainnet-v1.22.0" }
+Sui = { local = "../../../crates/sui-framework/packages/sui-framework" }
 
