--- a/dapps/client-gen-tests/move/examples/Move.toml
+++ b/dapps/client-gen-tests/move/examples/Move.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2024.beta"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "mainnet-v1.22.0" }
+Sui = { local = "../../../../crates/sui-framework/packages/sui-framework" }
 
 [addresses]
 examples = "0x0"
