--- a/external-crates/move/Cargo.toml
+++ b/external-crates/move/Cargo.toml
@@ -59,6 +59,7 @@ file_diff = "1.0.0"
 futures = "0.3.12"
 getrandom = "0.2.9"
 heck = "0.3.2"
+heuristic-graph-coloring = "0.1.0"
 hex = "0.4.3"
 hex-literal = "0.3.4"
 hkdf = "0.10.0"
