--- a/external-crates/move/crates/move-compiler/Cargo.toml
+++ b/external-crates/move/crates/move-compiler/Cargo.toml
@@ -12,6 +12,7 @@ anyhow.workspace = true
 codespan-reporting.workspace = true
 dunce.workspace = true
 hex.workspace = true
+heuristic-graph-coloring.workspace = true
 regex.workspace = true
 clap.workspace = true
 petgraph.workspace = true
