[Examples/Tic-Tac-Toe] Front-end
## Description

Build front-ends for shared and multi-sig tic-tac-toe, using
`create-react-dapp`.

## Test plan

Manually tested, (screenshots TBD).

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
   - 'examples/**'
   - '!**/dist/**'
   - '!**/.next/**'
+  - '!examples/tic-tac-toe/**'
   - '!sdk/create-dapp/templates'
   - '!sdk/typescript/scripts'
   - '!sdk/typescript/transactions'
