--- a/crates/sui-e2e-tests/Cargo.toml
+++ b/crates/sui-e2e-tests/Cargo.toml
@@ -62,7 +62,9 @@ sui-keys.workspace = true
 sui-rest-api.workspace = true
 shared-crypto.workspace = true
 
-passkey.workspace = true
+passkey-types.workspace = true
+passkey-client.workspace = true
+passkey-authenticator.workspace = true
 coset.workspace = true
 url.workspace = true
 p256.workspace = true
