--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -65,7 +65,7 @@ sui-enum-compat-util.workspace = true
 fastcrypto = { workspace = true, features = ["copy_key"] }
 fastcrypto-tbls.workspace = true
 fastcrypto-zkp.workspace = true
-passkey.workspace = true
+passkey-types.workspace = true
 
 typed-store-error.workspace = true
 derive_more.workspace = true
@@ -89,6 +89,8 @@ url.workspace = true
 tokio.workspace = true
 async-trait.workspace = true
 p256.workspace = true
+passkey-client.workspace = true
+passkey-authenticator.workspace = true
 
 [[bench]]
 name = "accumulator_bench"
